tests/baselines/reference/sourceMapValidationEnums.errors.txt
tests/cases/compiler/sourceMapValidationEnums.ts(2,5): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/sourceMapValidationEnums.ts(4,5): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/sourceMapValidationEnums.ts (2 errors) ====
    enum e {
        x,
        ~
!!! error TS2300: Duplicate identifier 'x'.
        y,
        x
        ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    enum e2 {
        x = 10,
        y = 10,
        z,
        x2
    }
    enum e3 {
    }